# advent-of-code-21

./: .gitignore  day_1.py  pyproject.toml
python/: pyproject.toml
python/aoc21/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py
python/tests/: __init__.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_utils.py
