[tool.poetry]
name = "advent-of-code-21"
version = "0.1.0"
description = ""
authors = ["John Harrison <john.harrison@autotrader.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
