[tool.poetry]
name = "advent-of-code-21"
version = "0.1.0"
description = ""
authors = ["John Harrison <john.harrison@autotrader.co.uk>"]
packages = [
    { include = "aoc21" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
